--- a/index.html
+++ b/index.html
@@ -4,10 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>My Project</title>
+    <title>Fake Store</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+      <header class="header">
+        <h1 class="title">Fresh Stock</h1>
+      </header>
+
+      <ul id="result" class="user-list">
+        <li>
+          <h3>Loading..</h3>
+        </li>
+        <!-- <li>
+          <div class="section">
+            <p>Gender: Men</p>
+            <p>Color: Black</p>
+          </div>
+          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" alt="fake">
+          <div class="user-info">
+            <h2>Roadster</h2>
+            <p>Roadster Men Balck Nepped Round Neck T-shirt</p>
+            <p class="cost">Cost: 699</p>
+            <button class="btn">Add To Cart</button>
+          </div>
+          
+        </li>
+        <li>
+          <div class="section">
+            <p>Gender: Men</p>
+            <p>Color: Black</p>
+          </div>
+          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" alt="fake">
+          <div class="user-info">
+            <h2>Roadster</h2>
+            <p>Roadster Men Balck Nepped Round Neck T-shirt</p>
+            <p class="cost">Cost: 699</p>
+            <button class="btn">Add To Cart</button>
+          </div>
+          
+        </li> -->
+      </ul>
+
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
